src/css/templates/blog-index.css
/* Blog Index Template */

.t-blog-index {
  display: grid;
  grid-template-rows: auto 1fr auto;
  min-height: 100vh;
}

.t-blog-index__image-1 {
  min-height: 30rem;
}

.t-blog-index__content-window-1 {
  display: grid;
  grid-template-rows: auto 1fr;

  h1 {
    place-self: center start;
    margin-inline: var(--uc3-space-base);
    padding: var(--uc3-space-sm) var(--uc3-space-base);
  }
}

.t-blog-index__content-1 {
  display: grid;
  align-content: start;
  gap: var(--uc3-space-lg);
  padding-block: var(--uc3-space-base) var(--uc3-space-lg);
  padding-inline: var(--uc3-space-lg);
}

